frontend/test/should_pass/iterated_006.grg
rule r
{
	x:Node;
	(
		:P();
		
		{+ }
	)[1:*]
	
	{+ }
}

pattern P
{
	.;
	modify {
	}
}
