frontend/test/should_fail/delretypesame_003.grg
rule r{	n:Node;	p:P(n);		modify {		m:Node<n>;		p();	}}pattern P(n:Node){	modify {		delete(n);	}}